<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clara.bismark439.ratemyhangar.crawl">

    <LinearLayout
        android:id="@+id/profile_window"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="113dp"
                android:layout_height="75sp"
                app:srcCompat="@drawable/profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nic"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="7"
                    android:gravity="center_vertical"
                    android:text="1011011"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Title"/>

                    <TextView
                        android:id="@+id/lvl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="lvl.100"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <view
            android:id="@+id/crawl_summ"
            class="com.clara.bismark439.ratemyhangar.summaryView"
            id="@+id/view"
            layout_width="match_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/if_you_only_spent_ge_to_buy_all_these_it_costs"/>

        <TextView
            android:id="@+id/USD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="$"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginTop="4sp"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:paddingRight="4sp"
                android:text="@string/only_count_premiums"/>

            <TextView
                android:id="@+id/Eff_USD"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginTop="4sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="$"
                android:textSize="30dp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <LinearLayout
                android:id="@+id/FETCH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <view
                        android:id="@+id/loading_view"
                        class="com.clara.bismark439.ratemyhangar.loadingView"
                        layout_width="match_parent"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"/>

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:indeterminate="true"
                        android:background="#F0000000"
                        android:layout_weight="2"/>
                </LinearLayout>

                <view
                    android:id="@+id/playthegame"
                    class="com.clara.bismark439.ratemyhangar.gameView"
                    id="@+id/view4"
                    layout_width="match_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <FrameLayout
                    android:id="@+id/adCont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/PERCENT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_vehicle_collection"/>

                <ProgressBar
                    android:id="@+id/NormalProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"

                    android:scaleY="3"/>

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:text="@string/your_premium_vehicle_collection"/>

                <ProgressBar
                    android:id="@+id/PremBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:scaleY="3"/>

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_rare_vehicle_collection"/>

                <ProgressBar
                    android:id="@+id/RareProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleY="3"/>

                <TextView
                    android:id="@+id/tp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_thunder_point"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/your_account_rating"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/crawl_acc_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="42sp"/>
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOtherAccount"
            android:text="@string/other_account"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPost"
            android:text="@string/post_score"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onHangar"
            android:text="@string/view_in_detail"/>
    </LinearLayout>

</LinearLayout>
