<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sugg_air"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clara.bismark439.ratemyhangar.suggestion.suggestion_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="3"
                android:background="@drawable/my_border"
                android:paddingLeft="6dp"
                android:text="@string/my_top_10_aircrafts"/>

            <LinearLayout
                android:id="@+id/air_top10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="11">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="3"
                android:background="@drawable/my_border"
                android:paddingLeft="6dp"
                android:text="@string/i_would_recommend_these_as_well_n_vehicles_you_have"/>

            <LinearLayout
                android:id="@+id/air_10recco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="11">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="3"
                android:background="@drawable/my_border"
                android:paddingLeft="6dp"
                android:text="@string/players_like_you_also_play_n_vehicles_you_don_t_have"/>

            <LinearLayout
                android:id="@+id/air_10recco2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="11">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
